# book-sample-app

backend/: Cargo.toml  build.rs
backend/src/: google_book_api.rs  main.rs
proto-def/: book.proto
