[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
prost = "0.10.0"
# sqlx = { version = "0.5.11", features = ['runtime-tokio-native-tls', "mysql", "macros", "json"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.7"
tonic-reflection = "0.4.0"

[build-dependencies]
tonic-build = "0.7"
